[package]

name = "staticfile"
version = "0.4.0"
authors = ["Zach Pomerantz <zmp@umich.edu>", "Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/staticfile"
license = "MIT"
keywords = ["iron", "web", "http", "file"]

[features]
cache = ["filetime"]

[dependencies]
iron = { git = "https://github.com/MJDSys/iron", branch = "async" }
mount = { git = "https://github.com/MJDSys/mount", branch = "async" }
time = "0.1"
url = "1.1"

[dependencies.filetime]
version = "0.1"
optional = true

[dev-dependencies]
hyper = { git = "https://github.com/hyperium/hyper" }
router = "0.5"
iron-test = { git = "https://github.com/MJDSys/iron-test", branch = "async" }
